# didactic-octo-giggle

./: .gitignore  AGENTS.md  BENCHMARK_DESIGN.md  EVAL_CAMPAIGN_GUIDE.md  MEMORY_ARCHITECTURE.md  MEMORY_REFACTOR_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
benchmarks/: benchmark-v1.json  coding_tasks.json  refactor_behavior_v1.json  refactor_failure_v1.json
owl/: __init__.py  benchmark_model_clients.py  benchmark_runner.py  cli.py  compaction_schema.py  context_budget.py  context_builder.py  context_discovery.py  context_invalidation.py  context_layers.py  context_manager.py  context_snapshot.py  context_sources.py  eval_campaign.py  evaluator.py  execution_state.py  failure_analyzer.py  memory_compactor.py  memory_config.py  memory_experiments_v2.py  memory_retriever.py  memory_utils.py  memory_validity.py  memory_writer.py  metrics.py  models.py  procedure_candidate_detector.py  recall_ranker.py  report_builder.py  run_store.py  runtime.py  semantic_memory.py  skill_candidate_registry.py  stale_observation_guard.py  tools.py  trace_logger.py  trace_schema.py  trace_validator.py  working_memory.py  workspace.py
scripts/: collect_resume_metrics.py  generate_test_report.py  owl.local.ps1.example  run_eval_campaign.py  run_large_scale_experiments.py  run_provider_experiments.py  run_refactor_eval.py
tests/: conftest.py  test_benchmark_runner.py  test_context_builder.py  test_context_discovery.py  test_context_layers.py  test_context_manager.py  test_context_snapshot.py  test_eval_campaign.py  test_evaluator.py  test_evaluator_process_metrics.py  test_memory.py  (+12 more)
(+19 files in other folders)
