[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owl"
version = "0.1.0"
description = "Small local coding agent for Ollama and OpenAI-compatible models"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
owl = "owl.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools]
packages = ["owl"]

[tool.pytest.ini_options]
addopts = "-ra"
cache_dir = ".tmp/pytest-cache"
